--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,6 @@
-<!DOCTYPE html>
-{{ question }}
-</html>
+<h1>{{ question.question_text }}</h1>
+<ul>
+{% for choice in question.choice_set.all %}
+    <li>{{ choice.choice_text }}</li>
+{% endfor %}
+</ul>
