--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,11 @@
 {% if latest_question_list %}
     <ul>
+        <!--  <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+     El anterior no aprovecha la facilidad de django para manipular urls
+     por lo que las rutas se ponen manualmente "/polls/" no como abajo que se
+     llama una variable que puede ser facilmente editable. abajo se implemente el % url-->
     {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
