--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 {% if latest_question_list %}
     <ul>
         <!--  <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
